--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "short_name": "calculator",
   "name": "calculator-thing",
-  //"icons": [
-   // {
-  //    "src": "/images/orange_192.png",
-  //    "type": "image/png",
-    //  "sizes": "192x192"
-   // },
+  "icons": [
+    {
+      "src": "icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
    // {
      // "src": "/images/orange_512.png",
    //   "type": "image/png",
      // "sizes": "512x512"
    // }
-  //],
+  ],
   "start_url": "/index.html",
   "background_color": "#0099fe",
   "display": "standalone",
